--- a/Basics/Add_CSS.html
+++ b/Basics/Add_CSS.html
@@ -17,9 +17,11 @@
 <body>
     <h1>Learn Cascading Style Sheets</h1>
 
-    <p style="background-color: brown;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt, optio!</p>
-    <p style="color: cadetblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempore temporibus sit, magnam voluptatibus, officia aliquid ut consequuntur, voluptas deserunt placeat tempora maxime. Assumenda incidunt quas optio blanditiis at natus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quod laboriosam iusto explicabo? Fugiat eligendi molestiae ut aperiam voluptatum ex, voluptates tempore recusandae adipisci. Doloremque esse, perferendis assumenda nesciunt, nemo eum suscipit neque reprehenderit, facere doloribus fugiat eius ipsum saepe id dolorem? Expedita amet nemo odit quos at eos debitis!</p>
+    <p style="background-color: brown;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatum.</p>
+    
+    <p style="color: cadetblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum repellendus, rem sunt beatae sequi delectus modi molestias fugit assumenda rerum pariatur et in at veritatis aliquid dicta, saepe officiis cum.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, doloremque. Autem natus, ullam praesentium quae corporis quas voluptatem fugiat nam architecto? Corporis quaerat reprehenderit, dolorum quas facere error quia inventore excepturi quae voluptatem? Consequuntur eaque quos nihil, debitis iste eius vitae eos, aspernatur ex quibusdam modi atque enim voluptas quis.</p>
 
     <footer>I am a footer</footer>
 </body>
