Add css using different selectors

--- a/Basics/Add_CSS.html
+++ b/Basics/Add_CSS.html
@@ -17,11 +17,13 @@
 <body>
     <h1>Learn Cascading Style Sheets</h1>
 
-    <p style="background-color: brown;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatum.</p>
-    
-    <p style="color: cadetblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum repellendus, rem sunt beatae sequi delectus modi molestias fugit assumenda rerum pariatur et in at veritatis aliquid dicta, saepe officiis cum.</p>
+    <p class="p" style="background-color: brown;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatum.</p>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, doloremque. Autem natus, ullam praesentium quae corporis quas voluptatem fugiat nam architecto? Corporis quaerat reprehenderit, dolorum quas facere error quia inventore excepturi quae voluptatem? Consequuntur eaque quos nihil, debitis iste eius vitae eos, aspernatur ex quibusdam modi atque enim voluptas quis.</p>
+    <p class="p" style="color: cadetblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum repellendus, rem sunt beatae sequi delectus modi molestias fugit assumenda rerum pariatur et in at veritatis aliquid dicta, saepe officiis cum.</p>
+
+    <p class="p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, doloremque. Autem natus, ullam praesentium quae corporis quas voluptatem fugiat nam architecto? Corporis quaerat reprehenderit, dolorum quas facere error quia inventore excepturi quae voluptatem? Consequuntur eaque quos nihil, debitis iste eius vitae eos, aspernatur ex quibusdam modi atque enim voluptas quis.</p>
+
+    <article id="article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ratione voluptas quia ut maiores itaque voluptates dolorem minima culpa vel, est laboriosam in fugit laborum eligendi nisi quis saepe rerum repellat. Provident, qui corporis ipsa voluptatum earum quia rem expedita recusandae. Unde similique laudantium, non voluptates voluptatum labore. Incidunt quibusdam corrupti quaerat dolores. Praesentium fuga quas ipsa dicta aspernatur dolores quaerat debitis obcaecati itaque officiis? Mollitia qui provident amet voluptatem fuga facilis, cumque ipsa aliquam laboriosam reprehenderit corporis architecto hic, similique eos? Libero, labore necessitatibus debitis provident ratione hic reiciendis velit recusandae magni, fugiat, quos omnis et vitae corporis aliquid?</article>
 
     <footer>I am a footer</footer>
 </body>
