add different postional property

--- a/Basics/7_position_ele.html
+++ b/Basics/7_position_ele.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Position</title>
     <link rel="stylesheet" href="7_postion_ele.css">
 </head>
 <body>
@@ -12,6 +12,9 @@
         <img src="bird_image2.jfif" alt="bird2" width="100px" height="80px" class="image2">
         <img src="bird_image3.jfif" alt="bird3" width="100px" height="80px" class="image3">
         <img src="bird_image4.jfif" alt="bird4" width="100px" height="80px" class="image4">
+    </div>
+    <div class="box">
+        
     </div>
 </body>
 </html>
