--- a/Basics/11_float_clear2.html
+++ b/Basics/11_float_clear2.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="box">
-        <div class="item">A</div>
-        <div class="item">B</div>
-        <div class="item">C</div>
-        <div class="item">D</div>
+        <div class="item" id="item1">A</div>
+        <div class="item" id="item2">B</div>
+        <div class="item" id="item3">C</div>
+        <div class="item" id="item4">D</div>
     </div>
 </body>
 </html>
