--- a/Basics/practice1.html
+++ b/Basics/practice1.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="item" id="item1">A</div>
-        <div class="item" id="item2">B</div>
-        <div class="item" id="item3">C</div>
-        <div class="item" id="item4">D</div>
+        <div class="box" id="box1">
+            <div class="item" id="item1">A</div>
+            <div class="item" id="item2">B</div>
+            <div class="item" id="item3">C</div>
+            <div class="item" id="item4">D</div>
+        </div>
     </div>
 </body>
 </html>
